syntax = "proto3";

option csharp_namespace = "WC.Service.Registration.gRPC.Services";

package registration;

service EmployeeService {
  rpc RegisterEmployee (EmployeeRegistrationRequest) returns (EmployeeRegistrationResponse);
}

message EmployeeRegistrationRequest {
  string id = 1;
  string email = 2;
  string password = 3;
  string role = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message EmployeeRegistrationResponse {
  string message = 1;
}
